# sqlmodel

./: .coverage.TRI-C02CV9F6ML85.3646.370724  .coverage.TRI-C02CV9F6ML85.88856.392884  .coverage.TRI-C02CV9F6ML85.89897.999205  .coverage.TRI-C02CV9F6ML85.91131.437025  .coverage.TRI-C02CV9F6ML85.93566.140184  .coverage.TRI-C02CV9F6ML85.94345.801861  .gitignore  pyproject.toml
sqlmodel/: __init__.py  main.py
sqlmodel/sql/: expression.py
